# rag_agent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
rag_agent/: settings.py
rag_agent/adapters/: __init__.py  embedder_ollama.py  factory.py  llm_fake.py  llm_ollama.py  llm_openai.py  loader_auto.py  loader_docx.py  loader_html.py  loader_pdf.py  loader_txt.py  reranker_hf.py  vector_chroma.py  vector_fake.py  verifier_llm.py
rag_agent/core/: dto.py  errors.py  logging_setup.py  ports.py  service.py
rag_agent/tests/: test_service_basic.py
rag_agent/ui/: gradio_app.py
